src/objects/ApplicationLog__c.object
<CustomObject>
    <fields>
        <fullName>ApexClass__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexMethod__c</fullName>
        <label>Apex Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationArea__c</fullName>
        <label>Application Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Logs</relationshipLabel>
        <relationshipName>ApplicationLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogType__c</fullName>
        <label>Log Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ApexClass__c</columns>
        <columns>ApexMethod__c</columns>
        <columns>ApplicationArea__c</columns>
        <columns>ExceptionType__c</columns>
        <columns>LogType__c</columns>
        <columns>Message__c</columns>
        <columns>TransactionId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CancellationLibrary</fullName>
        <columns>NAME</columns>
        <columns>ApexClass__c</columns>
        <columns>ApexMethod__c</columns>
        <columns>LogType__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApexClass__c</field>
            <operation>equals</operation>
            <value>CancellationLibrary</value>
        </filters>
        <label>CancellationLibrary</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Errors_Today</fullName>
        <columns>NAME</columns>
        <columns>ApexClass__c</columns>
        <columns>ApexMethod__c</columns>
        <columns>ApplicationArea__c</columns>
        <columns>ExceptionType__c</columns>
        <columns>LogType__c</columns>
        <columns>Message__c</columns>
        <columns>TransactionId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>LogType__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>Errors Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Forgot_Password</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>ApexClass__c</columns>
        <columns>ApexMethod__c</columns>
        <columns>ApplicationArea__c</columns>
        <columns>Contact__c</columns>
        <columns>ExceptionType__c</columns>
        <columns>LogType__c</columns>
        <columns>TransactionId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApplicationArea__c</field>
            <operation>equals</operation>
            <value>forgotPassword</value>
        </filters>
        <label>Forgot Password</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_User_Login_Attempt</fullName>
        <columns>NAME</columns>
        <columns>ApexClass__c</columns>
        <columns>Message__c</columns>
        <columns>ApexMethod__c</columns>
        <columns>ApplicationArea__c</columns>
        <columns>Contact__c</columns>
        <columns>ExceptionType__c</columns>
        <columns>LogType__c</columns>
        <columns>TransactionId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApplicationArea__c</field>
            <operation>equals</operation>
            <value>Nursfinders Portal</value>
        </filters>
        <filters>
            <field>ApexMethod__c</field>
            <operation>equals</operation>
            <value>login</value>
        </filters>
        <filters>
            <field>ApexClass__c</field>
            <operation>equals</operation>
            <value>PtSiteLoginController</value>
        </filters>
        <label>Inactive User Login Attempt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NPDB_Account_Email_Logs</fullName>
        <columns>NAME</columns>
        <columns>ApplicationArea__c</columns>
        <columns>ExceptionType__c</columns>
        <columns>LogType__c</columns>
        <columns>Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApexClass__c</field>
            <operation>equals</operation>
            <value>NPDBEmailHandler</value>
        </filters>
        <label>NPDB Account Email Logs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NPDB_Enrollment_Error</fullName>
        <columns>NAME</columns>
        <columns>ApexClass__c</columns>
        <columns>ApexMethod__c</columns>
        <columns>ApplicationArea__c</columns>
        <columns>Contact__c</columns>
        <columns>LogType__c</columns>
        <columns>ExceptionType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApexClass__c</field>
            <operation>equals</operation>
            <value>BackgroundCheckEnrollmentHandler</value>
        </filters>
        <label>NPDB Enrollment Error</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NPDB_Output_Ready</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApplicationArea__c</field>
            <operation>equals</operation>
            <value>NPDB</value>
        </filters>
        <label>NPDB Output Ready</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NPDB_Result_Processing_Error_s</fullName>
        <columns>NAME</columns>
        <columns>ApexClass__c</columns>
        <columns>ApexMethod__c</columns>
        <columns>ApplicationArea__c</columns>
        <columns>Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApexClass__c</field>
            <operation>equals</operation>
            <value>BackgroundCheckService</value>
        </filters>
        <filters>
            <field>ApplicationArea__c</field>
            <operation>equals</operation>
            <value>NPDB Result Processing</value>
        </filters>
        <label>NPDB Result Processing Error&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Todays_Logs</fullName>
        <columns>NAME</columns>
        <columns>ApexClass__c</columns>
        <columns>ApexMethod__c</columns>
        <columns>ApplicationArea__c</columns>
        <columns>Contact__c</columns>
        <columns>ExceptionType__c</columns>
        <columns>LogType__c</columns>
        <columns>Message__c</columns>
        <columns>TransactionId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Logs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Application Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>